--- a/meson_options.txt
+++ b/meson_options.txt
@@ -5,3 +5,4 @@ option(
 option(
   'core-plugins-as-shared-libraries', type: 'boolean', value: false,
   description: 'Compiles modules, particles and decorations as shared libraries, which are loaded on-demand')
+option('text-shaping', type: 'feature')
