meson: require epoll-shim on BSDs
eventfd/timerfd are Linux-only but BSDs have a shim via kqueue.
libwayland on FreeBSD uses epoll-shim by default, so the build may
fail at linking instead of compilation stage.

ld: error: undefined symbol: epoll_shim_close
>>> referenced by script.c:387 (modules/script.c:387)
>>>               yambar.p/modules_script.c.o:(run)
>>> referenced by script.c:388 (modules/script.c:388)
>>>               yambar.p/modules_script.c.o:(run)
>>> referenced by script.c:395 (modules/script.c:395)
>>>               yambar.p/modules_script.c.o:(run)
>>> referenced 15 more times

ld: error: undefined symbol: epoll_shim_read
>>> referenced by script.c:475 (modules/script.c:475)
>>>               yambar.p/modules_script.c.o:(run)
>>> referenced by script.c:340 (modules/script.c:340)
>>>               yambar.p/modules_script.c.o:(run_loop)
cc: error: linker command failed with exit code 1 (use -v to see invocation)

--- a/meson.build
+++ b/meson.build
@@ -50,6 +50,7 @@ m = cc.find_library('m')
 threads = dependency('threads')
 pixman = dependency('pixman-1')
 yaml = dependency('yaml-0.1')
+libepoll = dependency('epoll-shim', required: false)
 
 # X11/XCB dependencies
 xcb_aux = dependency('xcb-aux', required: get_option('backend-x11'))
@@ -120,7 +121,7 @@ yambar = executable(
   'tag.c', 'tag.h',
   'yml.c', 'yml.h',
   version,
-  dependencies: [bar, pixman, yaml, threads, dl, tllist, fcft] +
+  dependencies: [bar, pixman, yaml, libepoll, threads, dl, tllist, fcft] +
                 decorations + particles + modules,
   build_rpath: '$ORIGIN/modules:$ORIGIN/decorations:$ORIGIN/particles',
   export_dynamic: true,
